Attempt to work with Vercel, Supabase, prepping for cron job

--- a/vercel.json
+++ b/vercel.json
@@ -16,6 +16,11 @@
             "src": "/scrape/github",
             "methods": ["POST"],
             "dest": "api/github.py"
+        },
+        {
+            "src": "/scrape/batch",
+            "methods": ["GET"],
+            "dest": "api/batch_scrape.py"
         }
     ]
 }
