Run cron job every 5 minutes instead

--- a/vercel.json
+++ b/vercel.json
@@ -31,7 +31,7 @@
     "crons": [
         {
             "path": "/cron/batch-scrape",
-            "schedule": "* * * * *"
+            "schedule": "*/5 * * * *"
         }
     ]
 }
